k8s/admin-service.yaml
# Admin Service
apiVersion: v1
kind: Service
metadata:
    name: admin-service
    namespace: monorepo
    labels:
        app: admin
spec:
    type: ClusterIP
    ports:
        - port: 80
          targetPort: 80
          protocol: TCP
          name: http
    selector:
        app: admin
