k8s/web-service.yaml
# Web Service
apiVersion: v1
kind: Service
metadata:
    name: web-service
    namespace: monorepo
    labels:
        app: web
spec:
    type: ClusterIP
    ports:
        - port: 80
          targetPort: 80
          protocol: TCP
          name: http
    selector:
        app: web
