k8s/web-ingress.yaml
# Web Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: web-ingress
    namespace: monorepo
    annotations:
        nginx.ingress.kubernetes.io/ssl-redirect: 'true'
        cert-manager.io/cluster-issuer: 'letsencrypt-prod'
        nginx.ingress.kubernetes.io/configuration-snippet: |
            if (!-f $request_filename) {
                rewrite ^.*$ /index.html break;
            }
spec:
    ingressClassName: nginx
    tls:
        - hosts:
              - www.example.com
          secretName: web-tls
    rules:
        - host: www.example.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: web-service
                            port:
                                number: 80
